PL-1381: added laniakea configuration

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,10 @@ android {
     }
 }
 
+laniakeaPlugin {
+    maxCriticalPathLength = 3
+}
+
 dependencies {
     implementation project(':features:feature-1')
 
