--- a/features/feature-1/build.gradle
+++ b/features/feature-1/build.gradle
@@ -32,7 +32,7 @@ android {
 }
 
 dependencies {
-    implementation project(path: ':features:feature-2')
+    implementation project(':features:feature-2')
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
