--- a/features/feature-2/build.gradle
+++ b/features/feature-2/build.gradle
@@ -32,8 +32,8 @@ android {
 }
 
 dependencies {
-    implementation project(path: ':features:feature2-1')
-    implementation project(path: ':features:feature2-2')
+    implementation project(':features:feature2-1')
+    implementation project(':features:feature2-2')
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
