PL-1380: Moved android project to example package.

--- a/example/app/build.gradle
+++ b/example/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'com.indriver.laniakea.plugin'
+    //id 'com.indriver.laniakea.plugin'
 }
 
 android {
@@ -25,9 +25,9 @@ android {
     }
 }
 
-laniakeaPlugin {
-    maxCriticalPathLength = 3
-}
+//laniakeaPlugin {
+//    maxCriticalPathLength = 3
+//}
 
 dependencies {
     implementation project(':features:feature-1')
