--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,50 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript {
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath "com.android.tools.build:gradle:7.0.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
+plugins {
+    id 'maven-publish'
+    id 'org.jetbrains.kotlin.jvm' version '1.6.10'
+    id 'java-gradle-plugin'
+    id("com.github.johnrengelman.shadow") version "7.0.0" // ./gradlew shadowJar will generate jar in build/libs/
+    id 'org.jetbrains.kotlin.plugin.serialization' version "1.6.10"
+}
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+group 'com.indriver'
+version '0.0.1'
+
+// For publishing use ./gradlew publish
+publishing {
+    repositories {
+        maven {
+            url myMavenRepoWriteUrl
+        }
+    }
+
+    publications {
+        maven(MavenPublication) {
+            from components.java
+        }
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+repositories {
+    mavenCentral()
+}
+
+gradlePlugin {
+    plugins {
+        simplePlugin {
+            id = "com.indriver.laniakea.plugin"
+            implementationClass = 'com.indriver.laniakea.LaniakeaPlugin'
+        }
+    }
+}
+
+// https://imperceptiblethoughts.com/shadow/configuration/minimizing/
+shadowJar {
+    minimize()
+}
+
+dependencies {
+    implementation gradleApi()
+    implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation("guru.nidi:graphviz-java-all-j2v8:0.18.1") // https://github.com/nidi3/graphviz-java
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.1")
 }
