--- a/settings.gradle
+++ b/settings.gradle
@@ -1,13 +1,2 @@
-dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
-rootProject.name = "Laniakea Gradle Plugin"
-include ':app'
-include ':features:feature-1'
-include ':features:feature-2'
-include ':features:feature2-1'
-include ':features:feature2-2'
+rootProject.name = 'LaniakeaGradlePlugin'
+
