PL-1932: Added new modules.

--- a/example/settings.gradle
+++ b/example/settings.gradle
@@ -11,3 +11,5 @@ include ':features:feature-1'
 include ':features:feature-2'
 include ':features:feature2-1'
 include ':features:feature2-2'
+include ':features:feature-3'
+include ':features:feature3-1'
