--- a/example/features/feature-1/build.gradle
+++ b/example/features/feature-1/build.gradle
@@ -33,6 +33,7 @@ android {
 
 dependencies {
     implementation project(':features:feature-2')
+    implementation project(':features:feature-3')
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
