--- a/example/build.gradle
+++ b/example/build.gradle
@@ -14,6 +14,10 @@ buildscript {
     }
 }
 
+laniakeaPlugin {
+    maxCriticalPathLength = 3
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
