--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,16 +1,21 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply plugin: 'com.indriver.laniakea.plugin'
+
 buildscript {
     repositories {
         google()
         mavenCentral()
+        maven { url "https://mymavenrepo.com/repo/uxxQIabAQLjlJb6cE4lU/" }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.indriver:LaniakeaGradlePlugin:0.0.4"
     }
+}
+
+laniakeaPlugin {
+    maxCriticalPathLength = 3
 }
 
 task clean(type: Delete) {
